--- a/curriculum_dev/activities/00_01_02_web_dev.md
+++ b/curriculum_dev/activities/00_01_02_web_dev.md
@@ -1,3 +1,27 @@
 # Qué es el desarrollo web front-end y qué es el back-end
 
-LOREM IPSUM
+
+
+En el vasto mundo de la web, el desarrollo front-end juega un papel fundamental. ¿Alguna vez te has preguntado cómo interactúan los usuarios con un sitio web o una aplicación? ¿Qué es lo que hace que una página web sea atractiva, funcional y fácil de usar? Aquí es donde entra en juego el desarrollo web front-end.
+
+### ¿Qué es el desarrollo web front-end?
+
+El desarrollo web front-end se refiere a la parte de la creación de sitios web o aplicaciones que se centra en lo que el usuario ve y experimenta directamente. Es el conjunto de tecnologías y herramientas que permiten construir la interfaz de usuario y garantizar una experiencia fluida e interactiva para el usuario final.
+
+Los desarrolladores front-end trabajan con lenguajes como HTML, CSS y JavaScript para crear la estructura, el diseño y la interactividad de una página web o aplicación. Estos elementos determinan cómo se ve y se siente un sitio web, cómo se organizan los contenidos, cómo responden los botones y menús a las acciones del usuario, entre otras cosas.
+
+### La importancia del desarrollo web front-end
+
+Experiencia del usuario (UX): El front-end es crucial para la experiencia del usuario. Una interfaz bien diseñada y fácil de usar puede marcar la diferencia entre un usuario que permanece en el sitio y uno que lo abandona rápidamente. Los desarrolladores front-end se esfuerzan por crear interfaces intuitivas y atractivas que mantengan a los usuarios comprometidos.
+
+Accesibilidad: Un buen desarrollo front-end también implica hacer que un sitio web sea accesible para todos, incluidas las personas con discapacidades. Esto significa tener en cuenta factores como el contraste de colores, la navegación con teclado y la compatibilidad con lectores de pantalla.
+
+Optimización para dispositivos múltiples: Con la proliferación de dispositivos, desde teléfonos inteligentes hasta tablets y computadoras de escritorio, es crucial que un sitio web se vea bien y funcione sin problemas en todas estas plataformas. Los desarrolladores front-end utilizan técnicas de diseño responsivo y adaptativo para garantizar una experiencia consistente en todos los dispositivos.
+
+Velocidad y rendimiento: La optimización del rendimiento es clave para mantener a los usuarios comprometidos. Los desarrolladores front-end se ocupan de optimizar el rendimiento del sitio web, minimizando los tiempos de carga y asegurándose de que las interacciones sean rápidas y fluidas.
+
+Actualizaciones constantes: El desarrollo web front-end también implica mantenerse al día con las últimas tendencias y estándares de diseño. Los desarrolladores front-end deben estar en constante aprendizaje para ofrecer experiencias modernas y actualizadas que mantengan a los usuarios interesados y comprometidos.
+
+### Conclusión
+
+El desarrollo web front-end es la columna vertebral de la experiencia del usuario en la web. Desde la apariencia visual hasta la funcionalidad interactiva, los desarrolladores front-end son responsables de crear interfaces atractivas y accesibles que cautiven a los usuarios y los mantengan comprometidos. En un mundo donde la primera impresión es crucial, el front-end es la puerta de entrada a la experiencia del usuario en línea.
