--- a/curriculum_dev/activities/00_01_02_web_dev.md
+++ b/curriculum_dev/activities/00_01_02_web_dev.md
@@ -1,25 +1,96 @@
-# Qué es el desarrollo web front-end y qué es el back-end
+# 🔹Qué es el desarrollo web front-end y qué es el back-end
 
-En el vasto mundo de la web, el desarrollo front-end juega un papel fundamental. ¿Alguna vez te has preguntado cómo interactúan los usuarios con un sitio web o una aplicación? ¿Qué es lo que hace que una página web sea atractiva, funcional y fácil de usar? Aquí es donde entra en juego el desarrollo web front-end.
+**Dificultad:** 🌻 
+**Aprendizaje:** 🍯 
+**Tiempo:** ⏱ 45min
 
-### ¿Qué es el desarrollo web front-end?
+## Introducción
+
+¿Por qué es importante entender la diferencia entre front-end y back-end en el desarrollo web? ¿Cómo impactan estas áreas en la experiencia del usuario y la funcionalidad de los sitios web? Estas preguntas nos invitan a explorar más profundamente cada campo y su importancia en el mundo digital.
+
+## ¿Qué es el desarrollo web front-end?
+
+¿Alguna vez te has preguntado cómo interactúan los usuarios con un sitio web o una aplicación? ¿Qué es lo que hace que una página web sea atractiva, funcional y fácil de usar? Aquí es donde entra en juego el desarrollo web front-end.
 
 El desarrollo web front-end se refiere a la parte de la creación de sitios web o aplicaciones que se centra en lo que el usuario ve y experimenta directamente. Es el conjunto de tecnologías y herramientas que permiten construir la interfaz de usuario y garantizar una experiencia fluida e interactiva para el usuario final.
 
-Los desarrolladores front-end trabajan con lenguajes como HTML, CSS y JavaScript para crear la estructura, el diseño y la interactividad de una página web o aplicación. Estos elementos determinan cómo se ve y se siente un sitio web, cómo se organizan los contenidos, cómo responden los botones y menús a las acciones del usuario, entre otras cosas.
+Las desarrolladoras front-end trabajan con lenguajes como HTML, CSS y JavaScript para crear la estructura, el diseño y la interactividad de una página web o aplicación. Estos elementos determinan cómo se ve y se siente un sitio web, cómo se organizan los contenidos, cómo responden los botones y menús a las acciones del usuario, entre otras cosas.
 
-### La importancia del desarrollo web front-end
+## La importancia del desarrollo web front-end
 
-Experiencia del usuario (UX): El front-end es crucial para la experiencia del usuario. Una interfaz bien diseñada y fácil de usar puede marcar la diferencia entre un usuario que permanece en el sitio y uno que lo abandona rápidamente. Los desarrolladores front-end se esfuerzan por crear interfaces intuitivas y atractivas que mantengan a los usuarios comprometidos.
+### Experiencia del usuario (UX):
 
-Accesibilidad: Un buen desarrollo front-end también implica hacer que un sitio web sea accesible para todos, incluidas las personas con discapacidades. Esto significa tener en cuenta factores como el contraste de colores, la navegación con teclado y la compatibilidad con lectores de pantalla.
+El front-end es crucial para la experiencia del usuario. Una interfaz bien diseñada y fácil de usar puede marcar la diferencia entre un usuario que permanece en el sitio y uno que lo abandona rápidamente. Las desarrolladoras front-end se esfuerzan por crear interfaces intuitivas y atractivas que mantengan a los usuarios comprometidos.
 
-Optimización para dispositivos múltiples: Con la proliferación de dispositivos, desde teléfonos inteligentes hasta tablets y computadoras de escritorio, es crucial que un sitio web se vea bien y funcione sin problemas en todas estas plataformas. Los desarrolladores front-end utilizan técnicas de diseño responsivo y adaptativo para garantizar una experiencia consistente en todos los dispositivos.
+### Accesibilidad:
 
-Velocidad y rendimiento: La optimización del rendimiento es clave para mantener a los usuarios comprometidos. Los desarrolladores front-end se ocupan de optimizar el rendimiento del sitio web, minimizando los tiempos de carga y asegurándose de que las interacciones sean rápidas y fluidas.
+Un buen desarrollo front-end también implica hacer que un sitio web sea accesible para todas las personas, incluidas aquellas con dificultades o discapacidades visuales, motoras, auditivas, etc. Esto significa tener en cuenta factores como el contraste de colores, la navegación sólo con teclado y la compatibilidad con lectores de pantalla (texto a voz).
 
-Actualizaciones constantes: El desarrollo web front-end también implica mantenerse al día con las últimas tendencias y estándares de diseño. Los desarrolladores front-end deben estar en constante aprendizaje para ofrecer experiencias modernas y actualizadas que mantengan a los usuarios interesados y comprometidos.
+### Optimización para dispositivos múltiples:
 
-### Conclusión
+Con la proliferación de dispositivos, desde teléfonos inteligentes hasta tablets y computadoras de escritorio, es crucial que un sitio web se vea bien y funcione sin problemas en todas estas plataformas. Los desarrolladores front-end utilizan técnicas de diseño responsivo y adaptativo para garantizar una experiencia consistente en todos los dispositivos.
 
-El desarrollo web front-end es la columna vertebral de la experiencia del usuario en la web. Desde la apariencia visual hasta la funcionalidad interactiva, los desarrolladores front-end son responsables de crear interfaces atractivas y accesibles que cautiven a los usuarios y los mantengan comprometidos. En un mundo donde la primera impresión es crucial, el front-end es la puerta de entrada a la experiencia del usuario en línea.
+### Velocidad y rendimiento:
+
+La optimización del rendimiento es clave para mantener a los usuarios comprometidos. Los desarrolladores front-end se ocupan de optimizar el rendimiento del sitio web, minimizando los tiempos de carga y asegurándose de que las interacciones sean rápidas y fluidas.
+
+---
+
+## ¿Qué es el desarrollo web back-end?
+
+El desarrollo web back-end se refiere a la parte del servidor de una aplicación web. Esta área incluye todo lo que sucede "detrás de escena", desde servidores y bases de datos hasta la lógica de aplicación que procesa los datos del usuario. Las desarrolladoras back-end utilizan lenguajes como node.js, PHP, Ruby, Python y Java para construir y mantener el núcleo funcional que permite que los sitios web operen eficientemente.
+
+### La importancia del desarrollo web back-end
+
+#### Gestión de datos y transacciones:
+
+El back-end es fundamental para la gestión efectiva de datos y transacciones en un sitio web. Es responsable de recibir las entradas de los usuarios, procesarlas y almacenarlas adecuadamente en bases de datos. Esto es crucial para el funcionamiento de sitios que manejan transacciones comerciales, registros de usuarios o cualquier forma de datos que necesiten persistencia y seguridad. Las desarrolladoras back-end aseguran que los datos sean manejados de forma segura y eficiente, impactando directamente en la confiabilidad y funcionamiento del sitio.
+
+#### Interacción eficiente con el front-end:
+
+Aunque los usuarios no interactúan directamente con el back-end, este es esencial para que el front-end funcione correctamente. El back-end prepara y envía la información que el front-end necesita para presentar a los usuarios, y también recibe procesa y almacena los datos que genera el usuario en el front-end. Esta comunicación entre back-end y front-end debe ser fluida y eficiente para que las funcionalidades del sitio web, como cargar nuevas páginas, enviar formularios o actualizar contenido, se realicen sin demoras ni fallos.
+
+#### Seguridad:
+
+La seguridad es una preocupación primordial en el desarrollo back-end. Este se encarga de proteger el sitio web de ataques maliciosos, asegurando la integridad y privacidad de los datos de los usuarios. Funciones como la autenticación de usuarios, la encriptación de datos y la protección contra vulnerabilidades de seguridad son manejadas en el back-end, lo cual es fundamental para ganar y mantener la confianza de los usuarios.
+
+#### Escalabilidad y rendimiento:
+
+El back-end también juega un papel crucial en la escalabilidad y el rendimiento general del sitio web. Debe ser capaz de manejar aumentos en el tráfico y procesar grandes volúmenes de datos sin degradar la experiencia del usuario. Las desarrolladoras back-end trabajan en la optimización de consultas a la base de datos, la implementación de soluciones de caché y la gestión de la infraestructura del servidor para asegurar que el sitio web pueda crecer y responder adecuadamente a las demandas del usuario.
+
+---
+
+## Actividad
+
+El "aprendizaje activo" es un enfoque que implica la participación directa de las estudiantes en actividades prácticas y discusiones, lo que promueve la exploración y aplicación del conocimiento. Se enfoca en desarrollar habilidades críticas como el pensamiento crítico y la resolución de problemas, fomentando una mejor comprensión y retención del material aprendido.
+
+Investiga brevemente sobre las siguientes preguntas. **Elije 1 o 2 respuestas que más te sorprendieron y comenta al respecto.**
+
+1. ¿Qué son los *frameworks* y librerías en el desarrollo web?
+
+2. ¿Cómo ha evolucionado el rol del desarrollo front-end con la aparición de *frameworks* y librerías modernas como React, Angular y Vue.js?
+
+3. Explora la relación entre el Internet de las Cosas (IoT) y el desarrollo back-end.
+
+4. ¿Qué es una API y que aplicaciones tiene?
+
+## Insumos adicionales para tu aprendizaje:
+
+- Dr. Google (siempre)
+
+- AI: ChatGPT, Gemini, Perplexity, Bing, etc.. Recuerda que pueden alucinar y mentirte descaradamente, verifica siempre.
+
+- [YouTube 6min - Front-End vs. Back-End vs. Full Stack](https://youtu.be/yxTxhE_CCVs?si=j7gQKXVgidbVBTRl)
+
+## Guía de Autoevaluación
+
+No habrás cumplido con la actividad si:
+
+- [x] No investigaste sobre cada una de las preguntas.
+- [x] No comentas en el hilo de Discord sobre 1 o 2 rptas que te parecieron interesantes.
+
+---
+
+> 💬 [Comenta en el hilo de Discord:](https://discord.com/channels/1209273049304666113/1238540671535812699) sobre 1 o 2 respuestas a las preguntas de investigación que te parecieron particularmente interesantes o novedosas. No tengas miedo de parecer “que no sabes nada”, por algo estás acá ¿verdad?. Además, es hermoso aprender y compartir algo al respecto.
+
+---
