--- a/curriculum_dev/activities/00_01_02_web_dev.md
+++ b/curriculum_dev/activities/00_01_02_web_dev.md
@@ -82,6 +82,8 @@ Investiga brevemente sobre las siguientes preguntas. **Elije 1 o 2 respuestas qu
 
 - [YouTube 6min - Front-End vs. Back-End vs. Full Stack](https://youtu.be/yxTxhE_CCVs?si=j7gQKXVgidbVBTRl)
 
+- [YouTube 11min - Cómo estudiar DESARROLLO WEB](https://youtu.be/c-zAREbLPE0?si=n-cDrkWvxlmb-shk)
+
 ## Guía de Autoevaluación
 
 No habrás cumplido con la actividad si:
