agrega enlaces back a Discord
En los retos

--- a/curriculum_dev/activities/00_01_02_web_dev.md
+++ b/curriculum_dev/activities/00_01_02_web_dev.md
@@ -95,6 +95,6 @@ No habrás cumplido con la actividad si:
 
 ---
 
-> 💬 [Comenta en el hilo de Discord:](https://discord.com/channels/1209273049304666113/1238540671535812699) sobre 1 o 2 respuestas a las preguntas de investigación que te parecieron particularmente interesantes o novedosas. No tengas miedo de parecer “que no sabes nada”, por algo estás acá ¿verdad?. Además, es hermoso aprender y compartir algo al respecto.
+> 💬 [**Comenta en el hilo de Discord:**](https://discord.com/channels/1209273049304666113/1238540671535812699) sobre 1 o 2 respuestas a las preguntas de investigación que te parecieron particularmente interesantes o novedosas. No tengas miedo de parecer “que no sabes nada”, por algo estás acá ¿verdad?. Además, es hermoso aprender y compartir algo al respecto.
 
 ---
